            - fix showing -1 objects for new dashboards
            - fix showing empty totals for custom filter icons
          - Business Process:
            - show draft edits in overview
          - Bug Fixes
            - fix accessing performance data page in author mode
            - fix accessing reports page in author mode
            - fix title offset in trends graph

1.86-4   Thu Feb 12 21:47:53 CET 2015:
          - add action_menu_apply option to apply action menus on the fly
          - Panorama View:
            - add group based permissions for dashboards
            - move multiple icons by selecting them with ctrl click
            - also move multiple icons by mouse lasso
          - Bug Fixes
            - fix using comma separated backend list in CLI tool
            - fix undefined key_sort in CLI config parser

1.86-3   Thu Jan 29 19:57:35 CET 2015
          - add option for default service filter
          - add host/servce connection macros
          - Bug Fixes
            - fix icon logo path in statusmap parent view
            - fixed links to other dashboards in panorama plugin
            - fix listing all backends with object config when using http backends
            - fix product prefix in cli url requests

1.86-2   Sun Jan 18 17:45:37 CET 2015
          - Reporting:
            - add option for maximum number of concurrent reports
            - start reports from cron serial instead of all at once
          - Panorama View:
            - add server actions as possible link targets
            - fixed problem when moving rotated shapes
          - Bug Fixes
            - fixed macro replacement in action menu links
            - fixed error in cluetip library by shiping a new version
            - fixed problem with shadownaemon in non-xs env
            - fixed error: Can't use string xxx as an ARRAY

1.86     Thu Jan  8 14:10:41 CET 2015
          - add custom action menu
          - livestatus performance improvements