@@ -72,6 +72,7 @@ our %config = ('name'                   => 'Thruk',
                                           'escape_regex'        => \&Thruk::Utils::Filter::escape_regex,
                                           'get_message'         => \&Thruk::Utils::Filter::get_message,
                                           'throw'               => \&Thruk::Utils::Filter::throw,
+                                          'contains'            => \&Thruk::Utils::Filter::contains,
                                           'date_format'         => \&Thruk::Utils::Filter::date_format,
                                           'remove_html_comments' => \&Thruk::Utils::Filter::remove_html_comments,
                                           'format_date'         => \&Thruk::Utils::format_date,
