@@ -27,7 +27,7 @@
       [% SET class = 'button_peerUP'   IF backend_detail.$pd.running       %]
       [% SET class = 'button_peerDIS'  IF backend_detail.$pd.disabled == 2 %][%# hidden by user #%]
       [% SET class = 'button_peerHID'  IF backend_detail.$pd.disabled == 3 %][%# hidden by backend param #%]
-      [% SET class = 'button_peerHID'  IF param_backend && pd != param_backend %]
+      [% SET class = 'button_peerHID'  IF param_backend && !contains(param_backend, pd) %]
       [% SET class = 'button_peerDOWN' IF failed_backends.defined(pd) %][%# other errors #%]
       [% SET class = 'button_peerDIS'  IF backend_detail.$pd.disabled == 6 %][%# hidden by config tool #%]
       [% SET class = 'button_peerUP'   IF backend_detail.$pd.disabled == 7 %][%# active by config tool #%]
